--- a/demo.css
+++ b/demo.css
@@ -1,5 +1,6 @@
 .foo {
-    padding: 5px;
-    margin: 5px;
-    font-size: 5px;
+    margin: 5px; 
+    font-size: 6PX;
+    PADDING: 5px;
+    
 }
